# Exploring-Political-Authenticity

./: .env  .gitignore  README.md  clear_cache.sh  pyproject.toml  requirements.txt
src/: main.py
src/config/: base_config.py  dev_config.py  settings.py
src/tests/: get_date_timestamp.py
src/tests/httpserver/: server.py
src/tests/httpserver/static/: index.html  page1.html
